# vibes

./: .gitignore  .whisper_words.txt  Makefile  README.md  TASKS.md  WORKLOG.md  test_meter.sh  whisper.lua  whisper_words.txt
agent-configuration/: AGENTS.md  Makefile  README.md  TASKS.md  pyproject.toml  test_smoke.sh
agent-configuration/agent_configuration/: __init__.py  cli.py  lint.py  output.py  parser.py  resolver.py  traversal.py
formation-builder/: index.html
hammerspoon-whisper/: .whisper_words.txt  AGENTS.md  Makefile  README.md  TASKS.md  whisper-hs.el  whisper.lua
hammerspoon-whisper/launchd/: com.whisper.server.plist
launchd/: com.ollama.server.plist  com.whisper.server.plist  whisper-server-start.sh
meal-planning/: app.js  data.json  github.js  ics.js  index.html  llm.js
